src/objects/actionHub__ActionQueue__c.object
<CustomObject>
    <description>actionHub Action Queue</description>
    <fields>
        <fullName>actionHub__ActionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action Id</label>
        <referenceTo>actionHub__Action__c</referenceTo>
        <relationshipLabel>Action Queue</relationshipLabel>
        <relationshipName>Action_Queue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>actionHub__ActionName__c</fullName>
        <formula>actionHub__ActionId__r.actionHub__ActionName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__EventQueueId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Queue Id</label>
        <referenceTo>actionHub__EventQueue__c</referenceTo>
        <relationshipLabel>Action Queue</relationshipLabel>
        <relationshipName>Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>actionHub__RelaxedExecution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Relaxed Execution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>actionHub__RemainingRetries__c</fullName>
        <label>Remaining Retries</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>actionHub__RuleName__c</fullName>
        <formula>actionHub__ActionId__r.actionHub__RuleName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rule Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__SourceConnection__c</fullName>
        <formula>actionHub__EventQueueId__r.actionHub__SourceConnection__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Connection</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__SourceObjectAPIName__c</fullName>
        <formula>actionHub__EventQueueId__r.actionHub__SourceObjectAPIName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Object API Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__SourceObjectDisplayName__c</fullName>
        <formula>actionHub__EventQueueId__r.actionHub__SourceObjectDisplayName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NEW</fullName>
                </value>
                <value>
                    <fullName>COMPLETED</fullName>
                </value>
                <value>
                    <fullName>FAILED</fullName>
                </value>
                <value>
                    <fullName>RETRY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>actionHub__TargetConnection__c</fullName>
        <formula>actionHub__ActionId__r.actionHub__TargetConnection__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Connection</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__TargetObjectAPIName__c</fullName>
        <formula>actionHub__ActionId__r.actionHub__TargetObjectAPIName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Object API Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__TargetObjectDisplayName__c</fullName>
        <formula>actionHub__ActionId__r.actionHub__TargetObjectDisplayName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Object</label>
        <type>Text</type>
    </fields>
    <label>Action Queue</label>
    <listViews>
        <fullName>actionHub__AllActions</fullName>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>actionHub__Status__c</columns>
        <columns>actionHub__RuleName__c</columns>
        <columns>actionHub__ActionName__c</columns>
        <columns>actionHub__TargetConnection__c</columns>
        <columns>actionHub__TargetObjectDisplayName__c</columns>
        <columns>actionHub__RelaxedExecution__c</columns>
        <columns>actionHub__RemainingRetries__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Actions</label>
    </listViews>
    <listViews>
        <fullName>actionHub__CompletedActions</fullName>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>actionHub__Status__c</columns>
        <columns>actionHub__RuleName__c</columns>
        <columns>actionHub__ActionName__c</columns>
        <columns>actionHub__TargetConnection__c</columns>
        <columns>actionHub__TargetObjectDisplayName__c</columns>
        <columns>actionHub__RelaxedExecution__c</columns>
        <columns>actionHub__RemainingRetries__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>actionHub__Status__c</field>
            <operation>equals</operation>
            <value>COMPLETED</value>
        </filters>
        <label>Completed Actions</label>
    </listViews>
    <listViews>
        <fullName>actionHub__FailedActions</fullName>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>actionHub__Status__c</columns>
        <columns>actionHub__RuleName__c</columns>
        <columns>actionHub__ActionName__c</columns>
        <columns>actionHub__TargetConnection__c</columns>
        <columns>actionHub__TargetObjectDisplayName__c</columns>
        <columns>actionHub__RelaxedExecution__c</columns>
        <columns>actionHub__RemainingRetries__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>actionHub__Status__c</field>
            <operation>equals</operation>
            <value>FAILED</value>
        </filters>
        <label>Failed Actions</label>
    </listViews>
    <listViews>
        <fullName>actionHub__PendingActions</fullName>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>actionHub__Status__c</columns>
        <columns>actionHub__RuleName__c</columns>
        <columns>actionHub__ActionName__c</columns>
        <columns>actionHub__TargetConnection__c</columns>
        <columns>actionHub__TargetObjectDisplayName__c</columns>
        <columns>actionHub__RelaxedExecution__c</columns>
        <columns>actionHub__RemainingRetries__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>actionHub__Status__c</field>
            <operation>equals</operation>
            <value>NEW,RETRY,IN PROGRESS</value>
        </filters>
        <label>Pending Actions</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Action Queue Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>